--- a/templates/index.html
+++ b/templates/index.html
@@ -15,22 +15,21 @@
    body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: url('Todo.webp') no-repeat center center/cover;
+  background: url('uu.png') no-repeat center center/cover;
   font-family: 'Inter', sans-serif;   /* 👈 Use Inter everywhere by default */
   background-color: #f7f7f7;
   color: #333;
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  min-height: 115vh;
   padding: 1rem;
 }
 
     .login-icon {
     display: block;
-    width: 90px;
-    height: 90px;
-    border-radius: 50px;
+    width: 30%;
+    height: 30%;
     margin: 0 auto 15px auto;
     }
 
@@ -101,7 +100,7 @@
     button {
       width: 100%;
       padding: 0.75rem;
-      background-color: #1a1b1b;
+      background-color: #0033bfff;
       color: white;
       border: none;
       border-radius: 8px;
@@ -113,7 +112,7 @@
     }
 
     button:hover {
-      background-color:  #333;
+      background-color:  #19028cff
     }
 
     button:active {
@@ -153,7 +152,7 @@
 </head>
 <body>
   <main role="main">
-    <img src="do.webp" alt="To-Do Icon" class="login-icon" />
+    <img src="do.png" alt="To-Do Icon" class="login-icon" />
     <h1>DO IT</h1>
     <p>Let’s organize your day together</p>
     <form id="usernameForm" method="post" aria-label="Username Form">
