--- a/templates/add.html
+++ b/templates/add.html
@@ -14,7 +14,7 @@
     }
 
     body {
-      background: url('Todo.webp') no-repeat center center/cover;
+      background: url('uu.png') no-repeat center center/cover;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", sans-serif;
       background-color: #f7f7f7;
       color: #333;
@@ -460,7 +460,7 @@ select:focus {
       <header class="todo-header">
     <h1>Welcome, {{ session.username }}</h1>
     <button class="filter-btn" aria-label="Filter tasks"><i class="fa-solid fa-filter"></i></button>
-    <img src="do.webp" alt="To-Do Icon" class="login-icon" />
+    <img src="do.png" alt="To-Do Icon" class="login-icon" />
     <div class="search-bar">
       <input type="text" placeholder="Search tasks..." />
       <span class="search-icon"><i class="fas fa-search text-gray-500"></i></span>
