--- a/templates/create_account.html
+++ b/templates/create_account.html
@@ -197,13 +197,8 @@ input[type="password"]:focus {
         <div id="usernameError" class="error-message">Username cannot be empty</div>
     <label for="password">Enter your password:</label>
     <input type="password"  id="password" name="password"  placeholder="*******"  aria-describedby="passwordError" required/>
-   
-    <p>Don't have an account? 
-        <a href ="create_account.html">Sign up here</a>
-    </p>
-  
-  </div>
-      <button type="submit">Get Started</button>
+      </div>
+      <button type="submit">Sign up</button>
     </form>
 
   </main>
